refactor: modernize architecture with async support and improved modularity
BREAKING CHANGE: Complete architectural overhaul for v0.2.0

Core improvements:
- Migrate to async/await pattern for non-blocking operations
- Replace YAML config with TOML for simpler configuration
- Introduce Pydantic v2 models for type-safe data handling
- Add Protocol-based notifier interface for extensibility

Structural changes:
- Extract APT logic into dedicated apt.py module
- Consolidate update checking into core.py with UpdateChecker
- Define data models in models.py (Config, UpdateResult, Package)
- Simplify notifier architecture, removing unused implementations

New features:
- DBus desktop notifications via dbus-fast
- Typer-based CLI with improved command structure
- Structured logging with structlog
- Async file operations with aiofiles

Removed components:
- Legacy checker.py and config.py modules
- Unused notifiers (journal, log, status)
- YAML configuration support

This refactoring improves maintainability, performance, and sets
a foundation for future enhancements while maintaining compatibility
with existing MOTD and systemd integration.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+distiller-update (1.0.0) unstable; urgency=medium
+
+  [ utsavbalar1231 ]
+  * refactor: modernize architecture with async support and improved modularity
+
+ -- PamirAI Incorporated <support@pamir.ai>  Fri, 05 Sep 2025 13:09:16 +0000
+
 distiller-update (0.1.0) unstable; urgency=low
 
   * Initial release
