refactor: streamline codebase with utility extraction and cleanup
- Extract common utilities to dedicated modules (config, logging, formatting)
- Remove redundant docstrings and verbose logging statements
- Simplify error handling and async operations throughout
- Streamline APT interface by removing complex repository patterns

--- a/debian/install
+++ b/debian/install
@@ -1,3 +1,4 @@
+src/distiller_update/utils/*.py opt/distiller-update/src/distiller_update/utils
 src/distiller_update/*.py opt/distiller-update/src/distiller_update/
 src/distiller_update/notifiers/*.py opt/distiller-update/src/distiller_update/notifiers/
 
