--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+distiller-update (1.0.1) unstable; urgency=medium
+
+  * Apply package upgrades and fixes
+
+ -- PamirAI Incorporated <support@pamir.ai>  Mon, 16 Sep 2025 00:00:00 +0000
+
 distiller-update (1.0.0) unstable; urgency=medium
 
   [ utsavbalar1231 ]
