--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+distiller-update (2.1.0) unstable; urgency=medium
+
+  [ utsavbalar1231 ]
+  * feat: visual improvements to cli
+  * fix: Use dependency-groups.dev instead of tool.uv.dev-dependencies
+
+ -- PamirAI Incorporated <founders@pamir.ai>  Tue, 23 Sep 2025 02:24:21 +0530
+
 distiller-update (2.0.0) unstable; urgency=medium
 
   [ utsavbalar1231 ]
