Align CLI updates with Debian packaging
- bump project to 2.1.1, wire
 Usage: python -m distiller_update [OPTIONS] COMMAND [ARGS]...

╭─ Options ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ --install-completion          Install completion for the current shell.                                                                     │
│ --show-completion             Show completion for the current shell, to copy it or customize the installation.                              │
│ --help                        Show this message and exit.                                                                                   │
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭─ Commands ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ check     Check for updates.                                                                                                                │
│ daemon    Run as daemon.                                                                                                                    │
│ list      List available updates.                                                                                                           │
│ apply     Apply updates.                                                                                                                    │
│ version   Show version.                                                                                                                     │
╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯ JSON mode and verbose logging tweaks
- document new flag usage in README and add regression coverage for
- update Debian changelog/control

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+distiller-update (2.1.1) unstable; urgency=medium
+
+  * fix: ensure `distiller-update list --json --refresh` emits pure JSON
+  * feat: document CLI flags and promote verbose logging linkage
+  * chore: align Debian packaging with version 2.1.1
+
+ -- PamirAI Incorporated <support@pamir.ai>  Wed, 24 Sep 2025 19:30:58 -0400
+
 distiller-update (2.1.0) unstable; urgency=medium
 
   [ utsavbalar1231 ]
