fix: require root for list --refresh to prevent silent failures
The list command with --refresh flag attempts to run apt-get update which
requires root privileges to write to /var/lib/apt/lists/. Without this check,
the command would silently fail and return stale data. Now it properly fails
early with a clear error message when --refresh is used without root, while
still allowing list without --refresh to run as non-root.

Bump version to 2.2.1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+distiller-update (2.2.1) unstable; urgency=medium
+
+  * fix: require root for list --refresh to prevent silent failures
+
+ -- PamirAI Incorporated <founders@pamir.ai>  Wed, 08 Oct 2025 00:00:00 +0530
+
 distiller-update (2.2.0) unstable; urgency=medium
 
   [ utsavbalar1231 ]
