refactor(debian): migrate from /opt to /usr/lib using uv tool install
- Move installation from /opt/distiller-update to /usr/lib/distiller-update
- Replace manual venv setup with uv tool install --editable
- Remove wrapper script as uv tool creates executable automatically
- Update lintian overrides for Python bytecode in /usr/lib
- Add migration logic to clean up old /opt installation
- Simplify debian/rules by removing wrapper script handling

This change improves FHS compliance and leverages uv's built-in tool
management for cleaner package installation and maintenance.

Change-Id: I4cf797529ea7eee5ad4033b3fa18854d33977c92
Signed-off-by: utsavbalar1231 <utsavbalar1231@gmail.com>

--- a/debian/install
+++ b/debian/install
@@ -1,10 +1,8 @@
-src/distiller_update/utils/*.py opt/distiller-update/src/distiller_update/utils
-src/distiller_update/*.py opt/distiller-update/src/distiller_update/
-src/distiller_update/notifiers/*.py opt/distiller-update/src/distiller_update/notifiers/
+src/distiller_update/utils/*.py usr/lib/distiller-update/src/distiller_update/utils
+src/distiller_update/*.py usr/lib/distiller-update/src/distiller_update/
+src/distiller_update/notifiers/*.py usr/lib/distiller-update/src/distiller_update/notifiers/
 
 config/config.toml etc/distiller-update/
 
-pyproject.toml opt/distiller-update/
-README.md opt/distiller-update/
-
-debian/distiller-update-wrapper usr/bin/
+pyproject.toml usr/lib/distiller-update/
+README.md usr/lib/distiller-update/
