chore(release): bump version to v3.1.0
Update changelog, pyproject.toml and regenerate man page and lock file

Change-Id: Ibad811bd5a8f202f8310e3dd7de37a0f9a50a17e
Signed-off-by: utsavbalar1231 <utsavbalar1231@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+distiller-update (3.1.0) unstable; urgency=medium
+
+  [ utsavbalar1231 ]
+  * feat(config): add selective APT source updating for faster checks
+  * feat(led): add LED status indicators for package updates
+  * refactor(version): use importlib.metadata for dynamic version retrieval
+  * fix(checker): correct distribution filtering logic for selective updates
+  * feat(led): add red blink indicator for package update errors
+
+ -- PamirAI Incorporated <founders@pamir.ai>  Mon, 20 Oct 2025 15:16:13 +0530
+
 distiller-update (3.0.0) unstable; urgency=medium
 
   [ utsavbalar1231 ]
