--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+distiller-update (3.2.1) unstable; urgency=medium
+
+  [ utsavbalar1231 ]
+  * feat(logging): add file-based logging with rotation support
+
+ -- PamirAI Incorporated <founders@pamir.ai>  Sun, 09 Nov 2025 01:55:20 +0530
+
 distiller-update (3.2.0) unstable; urgency=medium
 
   [ utsavbalar1231 ]
