chore(release): bump version to v3.2.2
Change-Id: Iff167d602477515841a164b051a2be3e6c26780f
Signed-off-by: utsavbalar1231 <utsavbalar1231@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+distiller-update (3.2.2) unstable; urgency=medium
+
+  [ utsavbalar1231 ]
+  * build: modernize build system with gbp workflow and hardening
+  * feat(debian): add pre-removal cleanup script
+  * fix: enable non-interactive package installation
+  * feat(cli): add filter flags to apply command
+
+ -- PamirAI Incorporated <founders@pamir.ai>  Sun, 09 Nov 2025 01:56:08 +0530
+
 distiller-update (3.2.1) unstable; urgency=medium
 
   [ utsavbalar1231 ]
