TMP: migration hack
Change-Id: I7ac59480ab40172ad727ce9f23e4a3cf46894380
Signed-off-by: utsavbalar1231 <utsavbalar1231@gmail.com>

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+distiller-update (2.3.0) unstable; urgency=high
+
+  * MIGRATION BRIDGE: Automatic upgrade unstable -> testing
+  * Platform-aware distiller-genesis installation
+  * Self-cleaning: removes all migration artifacts on success
+
+ -- PamirAI Incorporated <founders@pamir.ai>  Thu, 13 Nov 2025 00:37:04 +0530
+
 distiller-update (2.2.1) unstable; urgency=medium
 
   * fix: require root for list --refresh to prevent silent failures
